Closed
Bug 521599
Opened 15 years ago
Closed 15 years ago
Leaks (small) since Liveconnect/OJI restored on 1.9.2 branch
Categories
(Core Graveyard :: Java: Live Connect, defect, P1)
Tracking
(status1.9.2 beta1-fixed)
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
status1.9.2 | --- | beta1-fixed |
People
(Reporter: smichaud, Assigned: mrbkap)
References
Details
Attachments
(1 file)
2.28 KB,
patch
|
smichaud
:
review+
|
Details | Diff | Splinter Review |
This bug has been spun off from bug 517355 comment #55.
Since the patches for bug 517355 and bug 521388 landed on the 1.9.2
branch (on 2009-10-09), mochitests and (sometimes) crashtests trigger
the following leaks:
leaked 3616 bytes during test execution
leaked 2 instances of nsCLiveconnect with size 4 bytes each (8 bytes total)
leaked 1 instance of nsComponentManagerImpl with size 276 bytes
leaked 1 instance of nsJVMManager with size 4 bytes
leaked 3 instances of nsLocalFile with size 1044 bytes each (3132 bytes total)
leaked 1 instance of nsNPAPIPlugin with size 96 bytes
leaked 1 instance of nsPluginHost with size 84 bytes
leaked 3 instances of nsTArray_base with size 4 bytes each (12 bytes total)
leaked 1 instance of nsVoidArray with size 4 bytes
http://tinderbox.mozilla.org/showlog.cgi?log=Firefox3.6-Unittest/1255123815.1255126224.11988.gz
http://tinderbox.mozilla.org/showlog.cgi?log=Firefox3.6-Unittest/1255124353.1255126125.10906.gz
Starting Monday, I'll be trying to find and fix these.
Reporter | ||
Updated•15 years ago
|
Assignee: nobody → smichaud
Assignee | ||
Comment 1•15 years ago
|
||
Hey Steven, I've been digging through this and I noticed that nsPluginTag::TryUnloadPlugin lost its aForceShutdown parameter (and it didn't come back in your merge). Because of this, we never call the plugin's Shutdown method, which in the MRJ plugin releases the component manager and its allocated nsCLiveconnects.
For reference, the "skip plugin Shutdown" code was removed in bug 488042. The then defunct parameter was removed in bug 500925.
Assignee | ||
Comment 2•15 years ago
|
||
Attachment #405706 -
Flags: review?(smichaud)
Reporter | ||
Comment 3•15 years ago
|
||
(In reply to comment #2)
I suspect this will cause crashes using Java.
I'll test on Monday.
Reporter | ||
Comment 4•15 years ago
|
||
To stop these leaks interfering with automated testing, dbaron
temporarily raised the leak threshold (on OS X) for mochitests and
crashtests:
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/1226d4feb6cb
This can be reversed once this bug is fixed.
Reporter | ||
Comment 5•15 years ago
|
||
(Following up comment #3)
Odd that it didn't cause crashes before, I admit.
I'll dig further into this on Monday.
Thanks for the tip.
Reporter | ||
Comment 6•15 years ago
|
||
(Following up comment #0)
> Since the patches for bug 517355 and bug 521388 landed on the 1.9.2
> branch (on 2009-10-09), mochitests and (sometimes) crashtests trigger
> the following leaks:
That's bug 517355 and *bug 521338*.
Reporter | ||
Comment 7•15 years ago
|
||
Comment on attachment 405706 [details] [diff] [review]
Possible leak fix
Yes, this patch seems to fix the leaks.
And no Java crashes. Furthermore, looking again at the code, I
needn't have worried about them.
Attachment #405706 -
Flags: review?(smichaud) → review+
Reporter | ||
Updated•15 years ago
|
Assignee: smichaud → mrbkap
Reporter | ||
Comment 8•15 years ago
|
||
Comment on attachment 405706 [details] [diff] [review]
Possible leak fix
This bug blocks a P1 blocker, so it should probably also block. But
to observe the formalities ...
Attachment #405706 -
Flags: approval1.9.2?
Updated•15 years ago
|
Flags: blocking1.9.2+
Priority: -- → P1
Assignee | ||
Comment 9•15 years ago
|
||
Assignee | ||
Updated•15 years ago
|
Attachment #405706 -
Flags: approval1.9.2?
Updated•15 years ago
|
Target Milestone: --- → mozilla1.9.2b1
Product: Core → Core Graveyard
Target Milestone: mozilla1.9.2b1 → ---
You need to log in
before you can comment on or make changes to this bug.
Description
•