Bug 521599 - Re-add some shutdown code that was lost in the OJI merge. r=smichaud a=blocking1.9.2+